# wordle-bot

./: .gitignore  Cargo.toml  Procfile
src/: lib.rs  pattern_builder.rs  wordle.rs
